API doc fixes
